# appgoblin-itunes-scraper

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  scraper_test.py  setup.py  test_runner.sh  util_test.py
.github/workflows/: python-app.yml
appgoblin_itunes_scraper/: exceptions.py  scraper.py  util.py
features/steps/: scraper.py
itunes_app_scraper/: scraper.py
